k8s/overlays/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rubik-solver
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "90"
spec:
  rules:
  - host: rubik-solver.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rubik-solver
            port:
              number: 8080
